# adaptive-attention-tiling-v2

./: .aider.chat.history.md  .aider.input.history  .bashrc  .coverage  .gitignore  .pre-commit-config.yaml  .pylintrc  .ruff.toml  APPLIED_THEORY.md  ATTENTION_ANALYSIS.md  CHANGELOG.md  CLASS_ANALYSIS.md  CLEANUP.md  CODE_ANALYSIS.md  CODE_REVIEW_NOTES.md  COMMON_ANALYSIS.md  COMPREHENSIVE_PLAN.md  CONNECTION_FORM_DEBUG_PLAN.md  CONNECTION_FORM_THEORY_NOTES.md  CRYSTAL_ANALYSIS.md  CRYSTAL_INTEGRATION.md  CURRENT_SPRINT.md  DEPENDENCY_ANALYSIS.md  DEVELOPMENT_ROADMAP.md  DUPLICATE_ANALYSIS.md  DUPLICATE_FILES_REPORT.md  FLOW_ANALYSIS.md  GEOMETRIC_FLOW_ANALYSIS.md  GEOMETRIC_FLOW_TEST_PLAN.md  GEOMETRIC_FLOW_VALIDATION_PLAN.md  GRADIENT_FLOW_INVESTIGATION.md  HOLOGRAPHIC_DEVELOPMENT_LOG.md  HOLOGRAPHIC_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  INFRASTRUCTURE_ANALYSIS.md  INTEGRATION_INDEX.md  INTEGRATION_MISSING_COMPONENTS.md  INTEGRATION_PLAN.md  INTEGRATION_REVIEW_PLAN.md  LIVING_INDEX.md  (+71 more)
.aider.tags.cache.v3/: cache.db  cache.db-shm  cache.db-wal
config/: default.py
configs/: default.py
dependency_graphs/: src_classes.dot
docs/: GEOMETRIC_LAYERS.md
lab/: create_samples.py  generate.py  get_samples.py  model.py  samples.json  tokenize_samples.py  tokenized_samples.json  train.py  vocab_info.json
oldmds/: COMPONENT_ANALYSIS.md  IMPLEMENTATION_PLAN.md  INTEGRATION_MISSING_COMPONENTS.md  INTEGRATION_PLAN.md  LIVING_INDEX.md  NEURAL_QUANTUM_IMPLEMENTATION.md  PERFORMANCE_INDEX.md  TEST_INDEX.md
pretrained/: holographic_net.pt
requirements/: dev.txt
(+468 files in other folders)
